[tool.poetry]
name = "nautobot_jinja_filters"
version = "0.1.0"
description = "Add custom jinja filters"
authors = ["Alexis Panagiotopoulos <apanagio@enomix.gr>"]
license = "GPL v2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
